update wyrms, remove from file director later

--- a/config/Wyrms of Nyrus Client.cfg
+++ b/config/Wyrms of Nyrus Client.cfg
@@ -4,9 +4,9 @@ general {
     # The index of the configuration preset you wish to use.
     # Setting this to -1 will make the mod use this version's default configurations.
     # Factory presets are defined in a range from 0 to 2, with increasing difficulty. Any value above this will use user-defined configurations.
-    # 0 = Classic, recommended for new players or nostalgia-fans, vanilla-friendly difficulty; evolution is weakest, Prober special abilities disabled
-    # 1 = Death World, medium difficulty, best suited for modpacks with multiple weapon/gear mods like Tinker's Construct; all features enabled, evolution is normal-strength
-    # 2 = Dark Forest, hardest difficulty, emulates the canonical power of the Nyral Wyrms. Balanced for mods like HBM's Nuclear Tech Mod; all destructive features enabled, evolution is extremely strong, all variants unlocked on first stage, etc.
+    # 0 = Arcade, a fast-paced invasion balanced around vanilla and WoN by itself. A great introduction to the mod.
+    # 1 = Classic, medium-low difficulty, best suited for modpacks with multiple weapon/gear mods like Tinker's Construct; all features enabled.
+    # 2 = Dark Forest, emulates the canonical power of the Nyral Wyrms while still being playable. Balanced for mods like HBM's Nuclear Tech Mod and the Scape and Run mod series; all extremely destructive features are enabled. Not for the faint of heart!
     # Min: -1
     # Max: 255
     I:"Config Preset"=2
@@ -18,8 +18,16 @@ general {
     # Disabling this can increase performance on clients.
     B:"Fancy Animations"=true
 
+    # Uses the experimental screen shake algorithm, which may be more expensive for lower-end hardware.
+    # Setting this to false will make the screen shake function identically to how it appears pre-v0.7.12
+    B:"Full Motion Shake"=false
+
+    # Enables or disables screenshake effects.
+    # Accessibility: Disabling this helps reduce motion sickness.
+    B:"Motion Shake"=true
+
     # Enables or disables the music that plays when various events happen, including invasion stage changes and Wyrmfollies hunting the player.The music is streamed by Wyrms of Nyrus, so it is not pre-loaded into memory first thing. There may be lag when music tracks start, so this option is available for users.Turn this off if you are a server, not a client. Calls to play tracks will still be sent out from servers to client, but the server itself will not play the songs.This option should ONLY have a memory usage impact when music tracks are streamed. If the music tracks are eating your RAM, disable this and report the memory leak to VPML immediately.
-    B:"Music Enabled"=false
+    B:"Music Enabled"=true
 }
 
 
