--- a/config/WyrmsOfNyrus/0/wyrms.cfg
+++ b/config/WyrmsOfNyrus/0/wyrms.cfg
@@ -34,8 +34,8 @@
     # Default: 1.000000
     D:Attack=1.0
 
-    # Default: 1.500000
-    D:"Block Breaking Strength"=1.5
+    # Default: 2.500000
+    D:"Block Breaking Strength"=2.5
 
     # Default: true
     B:"Can Break Blocks"=true
@@ -43,8 +43,8 @@
     # Default: true
     B:"Can Spread Hive Creep"=true
 
-    # Default: 0.500000
-    D:Defense=0.5
+    # Default: 0.000000
+    D:Defense=0.0
 
     # Default: true
     B:Enabled=true
@@ -59,14 +59,14 @@
         
      >
 
-    # Default: 12.000000
-    D:Health=12.0
+    # Default: 6.000000
+    D:Health=6.0
 
     # Default: 0.050000
     D:"Knockback Resistance"=0.05000000074505806
 
-    # Default: 2.000000
-    D:"Special Attack"=2.0
+    # Default: 3.000000
+    D:"Special Attack"=3.0
 
     # Default: 2.000000
     D:"Special Speed"=2.0
@@ -123,8 +123,8 @@
 ##########################################################################################################
 
 "creepling base stats" {
-    # Default: 2.000000
-    D:Attack=2.0
+    # Default: 2.250000
+    D:Attack=2.25
 
     # Default: false
     B:"Can Break Blocks"=false
@@ -193,8 +193,8 @@
 ##########################################################################################################
 
 "fungallid base stats" {
-    # Default: 3.000000
-    D:Attack=3.0
+    # Default: 4.000000
+    D:Attack=4.0
 
     # Default: false
     B:"Can Break Blocks"=false
@@ -202,14 +202,14 @@
     # Default: false
     B:"Can Spread Hive Creep"=false
 
-    # Default: 4.000000
-    D:Defense=4.0
+    # Default: 3.000000
+    D:Defense=3.0
 
     # Default: true
     B:Enabled=true
 
-    # Default: 10.000000
-    D:Health=10.0
+    # Default: 5.000000
+    D:Health=5.0
 
     # Default: 4
     I:"Infestation Range"=4
@@ -220,8 +220,104 @@
     # Default: 0.150000
     D:"Knockback Resistance"=0.15000000596046448
 
-    # Default: 0.350000
-    D:Speed=0.3499999940395355
+    # Default: 0.450000
+    D:Speed=0.44999998807907104
+}
+
+
+##########################################################################################################
+# grunt base stats
+#--------------------------------------------------------------------------------------------------------#
+# 
+# Stats for the Grunts.
+# 
+##########################################################################################################
+
+"grunt base stats" {
+    # Default: 5.000000
+    D:Attack=5.0
+
+    # Default: 12.000000
+    D:"Block Breaking Strength"=12.0
+
+    # Default: true
+    B:"Can Break Blocks"=true
+
+    # Default: false
+    B:"Can Spread Hive Creep"=false
+
+    # Default: 4.500000
+    D:Defense=4.5
+
+    # Default: true
+    B:Enabled=true
+
+    # Blocks in resourcenames that this entity cannot break.
+    S:"Griefing block blacklist" <
+        
+     >
+
+    # Blocks in mod names that this entity cannot break. For example, entering "minecraft" for example will make the entity unable to break all blocks from that mod.
+    S:"Griefing mod blacklist" <
+        
+     >
+
+    # Default: 57.000000
+    D:Health=57.0
+
+    # Default: 1.000000
+    D:"Knockback Resistance"=1.0
+
+    # Default: 0.250000
+    D:Speed=0.25
+}
+
+
+##########################################################################################################
+# jormungand base stats
+#--------------------------------------------------------------------------------------------------------#
+# 
+# Stats for the Jormungand.
+# 
+##########################################################################################################
+
+"jormungand base stats" {
+    # Default: 7.000000
+    D:Attack=7.0
+
+    # Default: 22.000000
+    D:"Block Breaking Strength"=22.0
+
+    # Default: true
+    B:"Can Break Blocks"=true
+
+    # Default: false
+    B:"Can Spread Hive Creep"=false
+
+    # Default: 3.000000
+    D:Defense=3.0
+
+    # Default: true
+    B:Enabled=true
+
+    # Blocks in resourcenames that this entity cannot break.
+    S:"Griefing block blacklist" <
+        
+     >
+
+    # Blocks in mod names that this entity cannot break. For example, entering "minecraft" for example will make the entity unable to break all blocks from that mod.
+    S:"Griefing mod blacklist" <
+        
+     >
+
+    # Default: 128.000000
+    D:Health=128.0
+
+    # Default: 1.000000
+    D:"Knockback Resistance"=1.0
+
+    # Default: 0.880000
+    D:Speed=0.8799999952316284
 }
 
 
@@ -243,14 +339,14 @@
     # Default: true
     B:"Can Spread Hive Creep"=true
 
-    # Default: 5.000000
-    D:Defense=5.0
+    # Default: 2.000000
+    D:Defense=2.0
 
     # Default: true
     B:Enabled=true
 
-    # Default: 9.000000
-    D:Health=9.0
+    # Default: 7.000000
+    D:Health=7.0
 
     # Default: 0.650000
     D:"Knockback Resistance"=0.6499999761581421
@@ -307,11 +403,11 @@
 ##########################################################################################################
 
 "prime base stats" {
-    # Default: 3.000000
-    D:Attack=3.0
+    # Default: 6.000000
+    D:Attack=6.0
 
-    # Default: 4.000000
-    D:"Block Breaking Strength"=4.0
+    # Default: 6.000000
+    D:"Block Breaking Strength"=6.0
 
     # Default: true
     B:"Can Break Blocks"=true
@@ -319,8 +415,8 @@
     # Default: true
     B:"Can Spread Hive Creep"=true
 
-    # Default: 6.000000
-    D:Defense=6.0
+    # Default: 5.000000
+    D:Defense=5.0
 
     # Default: true
     B:Enabled=true
@@ -335,14 +431,14 @@
         
      >
 
-    # Default: 28.000000
-    D:Health=28.0
+    # Default: 25.000000
+    D:Health=25.0
 
     # Default: 1.000000
     D:"Knockback Resistance"=1.0
 
-    # Default: 0.180000
-    D:Speed=0.18000000715255737
+    # Default: 0.190000
+    D:Speed=0.1899999976158142
 }
 
 
@@ -367,17 +463,17 @@
     # Default: false
     B:"Can Spread Hive Creep"=false
 
-    # Default: 3.250000
-    D:Defense=3.25
+    # Default: 1.250000
+    D:Defense=1.25
 
     # Default: true
     B:Enabled=true
 
-    # Default: 5.000000
-    D:Health=5.0
+    # Default: 2.000000
+    D:Health=2.0
 
-    # Default: 0.150000
-    D:"Knockback Resistance"=0.15000000596046448
+    # Default: 0.000000
+    D:"Knockback Resistance"=0.0
 
     # Default: 0.550000
     D:Speed=0.550000011920929
@@ -393,8 +489,8 @@
 ##########################################################################################################
 
 "rad'iwyrm base stats" {
-    # Default: 4.000000
-    D:Attack=4.0
+    # Default: 4.500000
+    D:Attack=4.5
 
     # Default: false
     B:"Can Break Blocks"=false
@@ -402,14 +498,14 @@
     # Default: false
     B:"Can Spread Hive Creep"=false
 
-    # Default: 2.500000
-    D:Defense=2.5
+    # Default: 2.000000
+    D:Defense=2.0
 
     # Default: true
     B:Enabled=true
 
-    # Default: 7.000000
-    D:Health=7.0
+    # Default: 6.000000
+    D:Health=6.0
 
     # Default: 0.350000
     D:"Knockback Resistance"=0.3499999940395355
@@ -428,8 +524,8 @@
 ##########################################################################################################
 
 "rover base stats" {
-    # Default: 3.000000
-    D:Attack=3.0
+    # Default: 3.500000
+    D:Attack=3.5
 
     # Default: false
     B:"Can Break Blocks"=false
@@ -443,8 +539,8 @@
     # Default: true
     B:Enabled=true
 
-    # Default: 4.000000
-    D:Health=4.0
+    # Default: 7.000000
+    D:Health=7.0
 
     # Default: 0.150000
     D:"Knockback Resistance"=0.15000000596046448
@@ -463,8 +559,8 @@
 ##########################################################################################################
 
 "soldier base stats" {
-    # Default: 3.000000
-    D:Attack=3.0
+    # Default: 4.000000
+    D:Attack=4.0
 
     # Default: 3.500000
     D:"Block Breaking Strength"=3.5
@@ -475,8 +571,8 @@
     # Default: false
     B:"Can Spread Hive Creep"=false
 
-    # Default: 6.250000
-    D:Defense=6.25
+    # Default: 4.500000
+    D:Defense=4.5
 
     # Default: true
     B:Enabled=true
@@ -491,14 +587,14 @@
         
      >
 
-    # Default: 18.000000
-    D:Health=18.0
-
-    # Default: 0.700000
-    D:"Knockback Resistance"=0.699999988079071
+    # Default: 23.000000
+    D:Health=23.0
 
     # Default: 0.500000
-    D:Speed=0.5
+    D:"Knockback Resistance"=0.5
+
+    # Default: 0.350000
+    D:Speed=0.3499999940395355
 }
 
 
@@ -562,6 +658,41 @@
 
 
 ##########################################################################################################
+# the visitor base stats
+#--------------------------------------------------------------------------------------------------------#
+# 
+# Stats for the The Visitor.
+# 
+##########################################################################################################
+
+"the visitor base stats" {
+    # Default: 1.000000
+    D:Attack=1.0
+
+    # Default: false
+    B:"Can Break Blocks"=false
+
+    # Default: false
+    B:"Can Spread Hive Creep"=false
+
+    # Default: 3.000000
+    D:Defense=3.0
+
+    # Default: true
+    B:Enabled=true
+
+    # Default: 250.000000
+    D:Health=250.0
+
+    # Default: 1.000000
+    D:"Knockback Resistance"=1.0
+
+    # Default: 0.150000
+    D:Speed=0.15000000596046448
+}
+
+
+##########################################################################################################
 # vanitas base stats
 #--------------------------------------------------------------------------------------------------------#
 # 
@@ -608,17 +739,6 @@
 ##########################################################################################################
 
 "visitor base stats" {
-    # Default: 4
-    D:"Normal DEF"=4.0
-
-    # Default: 250
-    D:"Normal HP"=250.0
-
-    # Default: 1.0
-    D:"Normal KBR"=1.0
-
-    # Default: 0.15
-    D:"Normal SPD"=0.15
 }
 
 
@@ -626,40 +746,34 @@
 # warrior base stats
 #--------------------------------------------------------------------------------------------------------#
 # 
-# Stats for the Warriors.
+# Stats for the Warrior.
 # 
 ##########################################################################################################
 
 "warrior base stats" {
-    # Default: 4
-    D:"Normal ATK"=4.0
+    # Default: 4.000000
+    D:Attack=4.0
 
-    # Default: 2
-    D:"Normal DEF"=2.0
+    # Default: false
+    B:"Can Break Blocks"=false
 
-    # Default: 14
-    D:"Normal HP"=14.0
+    # Default: false
+    B:"Can Spread Hive Creep"=false
 
-    # Default: 0.05
-    D:"Normal KBR"=0.05
+    # Default: 2.000000
+    D:Defense=2.0
 
-    # Default: 0.45
-    D:"Normal SPD"=0.45
+    # Default: true
+    B:Enabled=true
 
-    # Default: 12
-    D:"Tainted Variant ATK"=12.0
+    # Default: 8.000000
+    D:Health=8.0
 
-    # Default: 16
-    D:"Tainted Variant DEF"=16.0
+    # Default: 0.450000
+    D:"Knockback Resistance"=0.44999998807907104
 
-    # Default: 66
-    D:"Tainted Variant HP"=66.0
-
-    # Default: 0.5
-    D:"Tainted Variant KBR"=0.5
-
-    # Default: 0.45
-    D:"Tainted Variant SPD"=0.45
+    # Default: 0.350000
+    D:Speed=0.3499999940395355
 }
 
 
@@ -667,13 +781,13 @@
 # worker base stats
 #--------------------------------------------------------------------------------------------------------#
 # 
-# Stats for the Worker.
+# Stats for the Workers.
 # 
 ##########################################################################################################
 
 "worker base stats" {
-    # Default: 2.000000
-    D:Attack=2.0
+    # Default: 3.000000
+    D:Attack=3.0
 
     # Default: 8.000000
     D:"Block Breaking Strength"=8.0
@@ -684,20 +798,33 @@
     # Default: false
     B:"Can Spread Hive Creep"=false
 
-    # Default: 4.500000
-    D:Defense=4.5
+    # Default: 2.500000
+    D:Defense=2.5
 
     # Default: true
     B:Enabled=true
 
-    # Default: 14.000000
-    D:Health=14.0
+    # Blocks in resourcenames that this entity cannot break.
+    S:"Griefing block blacklist" <
+        
+     >
+
+    # Blocks in mod names that this entity cannot break. For example, entering "minecraft" for example will make the entity unable to break all blocks from that mod.
+    S:"Griefing mod blacklist" <
+        
+     >
+
+    # Default: 7.000000
+    D:Health=7.0
 
     # Default: 0.150000
     D:"Knockback Resistance"=0.15000000596046448
 
-    # Default: 0.350000
-    D:Speed=0.3499999940395355
+    # Default: 0.300000
+    D:Speed=0.30000001192092896
+
+    # The amount of small wyrms needed to be collected in order to upgrade to a Grunt.
+    I:"Wyrms to Upgrade"=4
 }
 
 
@@ -719,8 +846,8 @@
     # Default: false
     B:"Can Spread Hive Creep"=false
 
-    # Default: 8.000000
-    D:Defense=8.0
+    # Default: 3.000000
+    D:Defense=3.0
 
     # Default: true
     B:Enabled=true
@@ -728,8 +855,8 @@
     # Default: 4.000000
     D:Health=4.0
 
-    # Default: 0.150000
-    D:"Knockback Resistance"=0.15000000596046448
+    # Default: 0.000000
+    D:"Knockback Resistance"=0.0
 
     # Default: 0.550000
     D:Speed=0.550000011920929
