--- a/config/WyrmsOfNyrus/1/invasion.cfg
+++ b/config/WyrmsOfNyrus/1/invasion.cfg
@@ -21,8 +21,8 @@
     # Minimum wyrms to spawn from Hexe pods. Will still always spawn at least 1 wyrm. Hexe pods always spawn wyrmlings that grow into various castes of wyrms except royals. Default: 1
     I:"Hexe min spawns"=2
 
-    # Delay for each drop pod spawn from The Visitor. Default: 3500
-    I:"Visitor drop pod frequency"=3050
+    # Delay for each drop pod spawn from The Visitor. Default: 3000
+    I:"Visitor drop pod frequency"=3500
 
     # Random variation added to the drop delays, adds -x to x ticks to delay. Default: 500
     I:"Visitor drop pod frequency variation"=550
@@ -41,8 +41,8 @@
     # The speed at which Creep Hives spread The Creep. Every x entity updates, the creep hive runs a check and creeps over a valid block if found. Lower this to make it faster, or increase it even further to make creep hives do their thing a lot slower./n(WARNING: AS THIS MOB CREATES ACTIVE CREEPED BLOCKS, KEEP THIS VALUE VERY HIGH TO AVOID BLOCK UPDATE SPAM BUILDUP) Default: 1800
     I:"Creep Hive creep speed"=1800
 
-    # If a hive creep block fails to find a suitable block to creep, there is a 1 in n chance that it will decay into a hive block. Lower this value if you're experiencing TPS drops. Default: 55
-    I:"Creep decay chance"=55
+    # If a hive creep block fails to find a suitable block to creep, there is a 1 in x chance that it will decay into a hive block. Lower this value if you're experiencing TPS drops. Default: 30
+    I:"Creep decay chance"=30
 
     # If enabled, if a hive creep block decays and there is open air above it, it releases a radioactive gas. Default: false
     B:"Creep decay produces radioactive gas"=false
@@ -50,8 +50,8 @@
     # If The Creep is enabled or not. This stops spread. Default: true
     B:"Creep enabled"=true
 
-    # Maximum hardness of a block that can be infested. Can automatically generate a blacklist this way for other mods. Default: 2.45
-    D:"Creep spread max hardness"=2.45
+    # Maximum hardness of a block that can be infested. Can automatically generate a blacklist this way for other mods. Default: 10
+    D:"Creep spread max hardness"=10.0
 
     # Every time a creep block is created, the invasion points increase. If Invasion is not enabled, this won't work at all. It is recommended you should keep this number as a decimal unless if you want pain... Default: 0.015
     D:"Creep spread points"=0.015
@@ -132,6 +132,18 @@
         srparasites:pri_bolster;wyrmsofnyrus:prime
         srparasites:pri_arachnida;wyrmsofnyrus:prime
         srparasites:pri_devourer;wyrmsofnyrus:prime
+        srparasites:fer_enderman;wyrmsofnyrus:creepedhumanoid
+        srparasites:fer_human;wyrmsofnyrus:creepedhumanoid
+        srparasites:fer_villager;wyrmsofnyrus:creepedhumanoid
+        srparasites:fer_horse;wyrmsofnyrus:creepedbiter
+        srparasites:fer_cow;wyrmsofnyrus:creepedbiter
+        srparasites:fer_bear;wyrmsofnyrus:prime
+        srparasites:fer_pig;wyrmsofnyrus:creepedbiter
+        srparasites:fer_sheep;wyrmsofnyrus:creepedbiter
+        srparasites:fer_wolf;wyrmsofnyrus:creepedbiter
+        srparasites:gnat;wyrmsofnyrus:crawler
+        srparasites:pri_tozoon;wyrmsofnyrus:prime
+        srparasites:pri_vermin;wyrmsofnyrus:prime
      >
 }
 
@@ -151,7 +163,7 @@ invasion {
         1
      >
 
-    # Every x minutes, an invasion event takes place. Default: 10
+    # Every x minutes, an invasion event takes place. Default: 7
     I:"Invasion Event Frequency"=10
 
     # Wyrms gain invasion points for every kill. Set this to 0 to disable this feature entirely. Default: 1
@@ -160,11 +172,11 @@ invasion {
     # 1 in x chance to occur each day before wyrms start invading. Default: 10
     I:"Invasion Start Chance"=10
 
-    # 0 = Random chance, 1 = after x days, 2 = hybrid (time & chance). Default: 2
-    I:"Invasion Start Mode"=1
+    # 0 = Random chance, 1 = after x days, 2 = hybrid (time & chance). Default: 1
+    I:"Invasion Start Mode"=2
 
-    # Number of days until wyrms can start to invade. Default: 20
-    I:"Invasion Start Time"=20
+    # Number of days until wyrms can start to invade. Default: 10
+    I:"Invasion Start Time"=10
 
     # Enables the invasion system. Many functions of the mod will not work if this is off, including other sub-systems. Default: true
     B:"Invasion enabled"=true
@@ -178,118 +190,126 @@ invasion {
     # Probers deal heavy damage and every kill advances the invasion by 5 points, compared to only one, IF the entity can be sampled (hit) more than once. One-shots or each hit adds 2 points. They also have longer aggro range and fly faster. Set to false to disable this feature and make probers less dangerous. Default: true
     B:"Probing enabled"=true
 
-    # Remove entries or add entries to modify this stage's event pool. [ Min event ID: 0 | Max event ID: 4 ]
+    # Remove entries or add entries to modify this stage's event pool. [ Min event ID: 0 | Max event ID: 6 ]
     # 
     # Format: 1,10 OR 1,10,40,3,3
     # This creates an event with the ID of 1 with a weight of 10.
     # In the latter format, this creates an event with the ID of 1 with a weight of 10, giving it 40 seconds per stage, with 3 stages total and takes place at level 3
     S:"Stage 0 event pool" <
-        
+         
      >
 
     # How many points are required to reach this phase of the alien invasion. Phase 0 takes place below this. Default: 1000
     I:"Stage 1 Invasion Point threshold"=1000
 
-    # Remove entries or add entries to modify this stage's event pool. [ Min event ID: 0 | Max event ID: 4 ]
+    # Remove entries or add entries to modify this stage's event pool. [ Min event ID: 0 | Max event ID: 6 ]
     # 
     # Format: 1,10 OR 1,10,40,3,3
     # This creates an event with the ID of 1 with a weight of 10.
     # In the latter format, this creates an event with the ID of 1 with a weight of 10, giving it 40 seconds per stage, with 3 stages total and takes place at level 3
     S:"Stage 1 event pool" <
-        1,10,40,3,1
-        1,5,40,4,1
+        1,5,30,3,1
+        1,5,30,4,1
         2,10,10,5,1
         2,10,10,5,2
-        3,10,50,5,1
+        6,10,10,3,1
+        3,10,40,5,1
      >
 
     # How many points are required to reach this phase of the alien invasion. Default: 5000
     I:"Stage 2 Invasion Point threshold"=5000
 
-    # Remove entries or add entries to modify this stage's event pool. [ Min event ID: 0 | Max event ID: 4 ]
+    # Remove entries or add entries to modify this stage's event pool. [ Min event ID: 0 | Max event ID: 6 ]
     # 
     # Format: 1,10 OR 1,10,40,3,3
     # This creates an event with the ID of 1 with a weight of 10.
     # In the latter format, this creates an event with the ID of 1 with a weight of 10, giving it 40 seconds per stage, with 3 stages total and takes place at level 3
     S:"Stage 2 event pool" <
-        1,10,40,3,1
-        1,5,40,4,1
-        2,10,10,5,3
-        3,10,50,5,2
+        1,5,30,3,1
+        1,5,30,4,1
+        4,10,10,5,3
+        3,10,30,5,2
         2,5,20,5,4
-        4,10,50,3,1
+        4,10,20,3,1
+        6,5,10,4,2
+        6,2,10,5,1
      >
 
     # How many points are required to reach this phase of the alien invasion. Default: 10000
     I:"Stage 3 Invasion Point threshold"=10000
 
-    # Remove entries or add entries to modify this stage's event pool. [ Min event ID: 0 | Max event ID: 4 ]
+    # Remove entries or add entries to modify this stage's event pool. [ Min event ID: 0 | Max event ID: 6 ]
     # 
     # Format: 1,10 OR 1,10,40,3,3
     # This creates an event with the ID of 1 with a weight of 10.
     # In the latter format, this creates an event with the ID of 1 with a weight of 10, giving it 40 seconds per stage, with 3 stages total and takes place at level 3
     S:"Stage 3 event pool" <
-        1,10,35,3,2
+        1,2,25,3,2
         5,5,60,3,1
         2,10,10,5,3
-        3,10,50,5,4
+        3,10,30,5,4
         5,2,60,4,1
-        4,20,50,3,1
+        4,30,10,3,1
+        6,5,10,5,2
+        6,2,10,5,3
      >
 
     # How many points are required to reach this phase of the alien invasion. Default: 50000
     I:"Stage 4 Invasion Point threshold"=50000
 
-    # Remove entries or add entries to modify this stage's event pool. [ Min event ID: 0 | Max event ID: 4 ]
+    # Remove entries or add entries to modify this stage's event pool. [ Min event ID: 0 | Max event ID: 6 ]
     # 
     # Format: 1,10 OR 1,10,40,3,3
     # This creates an event with the ID of 1 with a weight of 10.
     # In the latter format, this creates an event with the ID of 1 with a weight of 10, giving it 40 seconds per stage, with 3 stages total and takes place at level 3
     S:"Stage 4 event pool" <
-        1,10,35,3,2
+        1,2,25,3,2
         5,5,60,3,1
         2,10,10,5,3
-        3,10,50,5,4
+        3,10,30,5,4
         5,2,60,4,1
-        4,20,50,3,1
+        4,30,10,3,1
+        6,5,10,5,2
+        6,2,10,5,3
      >
 
     # How many points are required to reach this phase of the alien invasion. Default: 100000
     I:"Stage 5 Invasion Point threshold"=100000
 
-    # Remove entries or add entries to modify this stage's event pool. [ Min event ID: 0 | Max event ID: 4 ]
+    # Remove entries or add entries to modify this stage's event pool. [ Min event ID: 0 | Max event ID: 6 ]
     # 
     # Format: 1,10 OR 1,10,40,3,3
     # This creates an event with the ID of 1 with a weight of 10.
     # In the latter format, this creates an event with the ID of 1 with a weight of 10, giving it 40 seconds per stage, with 3 stages total and takes place at level 3
     S:"Stage 5 event pool" <
-        1,10,35,3,2
+        1,2,25,3,2
         5,5,60,3,1
         2,10,10,5,3
-        3,10,50,5,4
+        3,10,30,5,4
         5,2,60,4,1
-        4,20,50,3,1
+        4,30,10,3,1
+        6,5,10,5,2
+        6,2,10,5,3
      >
 
     # How many points are required to reach this phase of the alien invasion. Default: 2500000
     I:"Stage 6 Invasion Point threshold"=2500000
 
-    # Remove entries or add entries to modify this stage's event pool. [ Min event ID: 0 | Max event ID: 4 ]
+    # Remove entries or add entries to modify this stage's event pool. [ Min event ID: 0 | Max event ID: 6 ]
     # 
     # Format: 1,10 OR 1,10,40,3,3
     # This creates an event with the ID of 1 with a weight of 10.
     # In the latter format, this creates an event with the ID of 1 with a weight of 10, giving it 40 seconds per stage, with 3 stages total and takes place at level 3
     S:"Stage 6 event pool" <
-        1,10,35,3,2
+        1,2,25,3,2
         5,5,60,3,1
         2,10,10,5,3
-        3,10,50,5,4
+        3,10,30,5,4
         5,2,60,4,1
-        4,20,50,3,1
+        4,30,10,3,1
+        6,5,10,5,2
+        6,2,10,5,3
      >
-
-    # Made for Trepidation. Any value at 0 or below disables this; overrides the original drop pod heights for events. Default: -1
-    I:"Trepidation Mode Drop Pod Height"=-1
 }
 
 
