--- a/config/WyrmsOfNyrus/0/general.cfg
+++ b/config/WyrmsOfNyrus/0/general.cfg
@@ -40,7 +40,7 @@ ai {
     B:"Psychics are fun!"=false
 
     # The time in seconds between when wyrms can enrage. Default: 30
-    I:"Rage Cooldown"=30
+    I:"Rage Cooldown"=20
 
     # Rage is applied when wyrms had a target, but had to switch priorities. This causes wyrms to get annoyed and switch targets, causing them to knock their original target away, gain short buffs, and go after the being that interrupted them. Default: true
     B:"Rage Enabled"=true
@@ -51,24 +51,6 @@ ai {
 
 
 creeped {
-    # Creepwyrms can check a block within a x by x by x range and infest it. For example, a range of 8 makes creepwyrms add blocks in a 8x8x8 range. Default: 16
-    I:"Creepwyrm Infestation Range"=16
-
-    # Maximum tier of Creeped that Creepwyrms can spawn. Default: 0
-    I:"Creepwyrm Maximum Spawn Tier"=0
-
-    # How far up Creepwyrms can call in Creeped Pods. Default: 30
-    I:"Creepwyrm Pod Call Radius"=30
-
-    # The number of Creeped Pods Creepwyrms will summon. Default: 1
-    I:"Creepwyrm Pod Call Threshold"=1
-
-    # Creepwyrms must summon x amount of times before they call a creeped pod to spread their influence. Default: 10
-    I:"Creepwyrm Pod Call Threshold Spawn"=10
-
-    # Amount of blocks Creepwyrms need to infest in order to spawn something. Default: 20
-    I:"Creepwyrm Spawn Threshold"=20
-
     # Makes the Creeped immune to cactus damage. Default: false
     B:"Immune to cacti"=false
 
@@ -99,7 +81,7 @@ gestalt {
     D:"Infamy DMG Required Floor"=4.0
 
     # 1 in X chance to decay infamy every tick. Goes down exponentially faster if infamy is high. Default: 20000
-    I:"Infamy Decay Chance"=20000
+    I:"Infamy Decay Chance"=10000
 
     # Players that pick fights with wyrms will build up infamy within the Hive, and attract other wyrms to the player's general area faster, if this is disabled, wyrms will only slowly congregate around players. Default: true
     B:"Infamy Enabled"=true
@@ -111,7 +93,7 @@ gestalt {
     B:"Max infamy Creeped Spawns"=true
 
     # How much of an impact does infamy have on Total Awareness Range?. Default: 0.25
-    D:"TAR Infamy Modifier"=0.25
+    D:"TAR Infamy Modifier"=0.3499999940395355
 
     # Number of seconds until wyrms forget their target. Default: 15
     I:"Target memory"=15
@@ -123,7 +105,7 @@ gestalt {
     B:"Total Awareness"=true
 
     # Control how close a member of the hive must be to the player to sense them regardless if there's line of sight or not. Default: 4
-    D:"Total Awareness Range"=3.0
+    D:"Total Awareness Range"=4.0
 
     # While infamy is maxed out, wyrms and creeped know almost EXACTLY where the player is at all times, so long as they're within proximity. This total knowledge proximity is far longer than the Total Awareness Range. Default: false
     B:"Total War"=false
@@ -141,10 +123,10 @@ global {
 
 wyrmfollies {
     # The factor of which wyrmfolly stats increase. Default: 1.05
-    D:"Wyrmfolly buff factor"=1.149999976158142
+    D:"Wyrmfolly buff factor"=1.25
 
     # The number of kills before a folly levels up. Default: 5
-    I:"Wyrmfolly level steps"=5
+    I:"Wyrmfolly level steps"=4
 }
 
 
@@ -160,8 +142,8 @@ wyrms {
     # Drop pods can damage blocks around them with an actual explosion. SHOULD BE PAIRED WITH WYRMS AND CREEPED BEING IMMUNE TO EXPLOSIONS! Default: false
     B:"Drop pods cause block damage"=false
 
-    # The damage multiplier flying wyrms (including probers) will take from projectiles. Will not always be applicable to some flying wyrms. Does not apply to voidwyrms. 2.0 = doubled damage Default: 2.5
-    D:"Flying Wyrm Projectile Weakness"=2.5
+    # The damage multiplier flying wyrms (including probers) will take from projectiles. Will not always be applicable to some flying wyrms. Not applied to Voidwyrms. 2.0 = doubled damage Default: 2.5
+    D:"Flying Wyrm Projectile Weakness"=2.0
 
     # Makes wyrms immune to cactus damage. Default: false
     B:"Immune to cacti"=false
@@ -175,11 +157,11 @@ wyrms {
     # Don't eat me! Stops worm entities from insta-killing entities with their head. Instead, heads do 3x damage. Default: true
     B:"No worm instagibs"=true
 
-    # When health is below 20%, the wyrm in question has x seconds before it explodes. If it is set on fire at this moment, the explosion power is doubled. Default: 30
-    I:"Uranium Variant Timer"=30
+    # When health is below 20%, the wyrm in question has x seconds before it explodes. If it is set on fire at this moment, the explosion power is doubled. Default: 20
+    I:"Uranium Variant Timer"=20
 
-    # The damage multiplier voidwyrms (like the Visitor) will take from projectiles. Will not always be applicable to some voidwyrms. Does not apply to flying wyrms. 2.0 = doubled damage Default: 3.0
-    D:"Voidyrm Projectile Weakness"=3.0
+    # The damage multiplier voidwyrms (like the Visitor) will take from projectiles. Will not always be applicable to some voidwyrms. Does not apply to flying wyrms. 2.0 = doubled damage Default: 2.0
+    D:"Voidyrm Projectile Weakness"=1.850000023841858
 
     # As a baseline, workers make a product every x ticks. This value is the base time it will take, total time will vary based on RNG still. Default: 2500
     I:"Worker productivity"=2500
