--- a/config/WyrmsOfNyrus/1/wyrms.cfg
+++ b/config/WyrmsOfNyrus/1/wyrms.cfg
@@ -43,8 +43,8 @@
     # Default: true
     B:"Can Spread Hive Creep"=true
 
-    # Default: 1.000000
-    D:Defense=1.0
+    # Default: 0.500000
+    D:Defense=0.5
 
     # Default: true
     B:Enabled=true
@@ -59,20 +59,20 @@
         
      >
 
-    # Default: 13.500000
-    D:Health=13.5
+    # Default: 12.000000
+    D:Health=12.0
 
     # Default: 0.050000
     D:"Knockback Resistance"=0.05000000074505806
 
-    # Default: 3.000000
-    D:"Special Attack"=3.0
+    # Default: 2.000000
+    D:"Special Attack"=2.0
 
     # Default: 2.000000
     D:"Special Speed"=2.0
 
-    # Default: 0.600000
-    D:Speed=0.6000000238418579
+    # Default: 0.300000
+    D:Speed=0.30000001192092896
 }
 
 
@@ -123,8 +123,8 @@
 ##########################################################################################################
 
 "creepling base stats" {
-    # Default: 3.000000
-    D:Attack=3.0
+    # Default: 1.000000
+    D:Attack=1.0
 
     # Default: false
     B:"Can Break Blocks"=false
@@ -132,20 +132,20 @@
     # Default: true
     B:"Can Spread Hive Creep"=true
 
-    # Default: 0.500000
-    D:Defense=0.5
+    # Default: 0.000000
+    D:Defense=0.0
 
     # Default: true
     B:Enabled=true
 
-    # Default: 2.000000
-    D:Health=2.0
+    # Default: 1.000000
+    D:Health=1.0
 
     # Default: 0.050000
     D:"Knockback Resistance"=0.05000000074505806
 
-    # Default: 0.600000
-    D:Speed=0.6000000238418579
+    # Default: 0.400000
+    D:Speed=0.4000000059604645
 }
 
 
@@ -193,8 +193,8 @@
 ##########################################################################################################
 
 "fungallid base stats" {
-    # Default: 3.000000
-    D:Attack=3.0
+    # Default: 2.500000
+    D:Attack=2.5
 
     # Default: false
     B:"Can Break Blocks"=false
@@ -208,8 +208,8 @@
     # Default: true
     B:Enabled=true
 
-    # Default: 12.000000
-    D:Health=12.0
+    # Default: 9.000000
+    D:Health=9.0
 
     # Default: 4
     I:"Infestation Range"=4
@@ -226,6 +226,102 @@
 
 
 ##########################################################################################################
+# grunt base stats
+#--------------------------------------------------------------------------------------------------------#
+# 
+# Stats for the Grunts.
+# 
+##########################################################################################################
+
+"grunt base stats" {
+    # Default: 4.000000
+    D:Attack=4.0
+
+    # Default: 12.000000
+    D:"Block Breaking Strength"=12.0
+
+    # Default: true
+    B:"Can Break Blocks"=true
+
+    # Default: false
+    B:"Can Spread Hive Creep"=false
+
+    # Default: 5.500000
+    D:Defense=5.5
+
+    # Default: true
+    B:Enabled=true
+
+    # Blocks in resourcenames that this entity cannot break.
+    S:"Griefing block blacklist" <
+        
+     >
+
+    # Blocks in mod names that this entity cannot break. For example, entering "minecraft" for example will make the entity unable to break all blocks from that mod.
+    S:"Griefing mod blacklist" <
+        
+     >
+
+    # Default: 68.000000
+    D:Health=68.0
+
+    # Default: 1.000000
+    D:"Knockback Resistance"=1.0
+
+    # Default: 0.230000
+    D:Speed=0.23000000417232513
+}
+
+
+##########################################################################################################
+# jormungand base stats
+#--------------------------------------------------------------------------------------------------------#
+# 
+# Stats for the Jormungand.
+# 
+##########################################################################################################
+
+"jormungand base stats" {
+    # Default: 6.500000
+    D:Attack=6.5
+
+    # Default: 15.000000
+    D:"Block Breaking Strength"=15.0
+
+    # Default: true
+    B:"Can Break Blocks"=true
+
+    # Default: false
+    B:"Can Spread Hive Creep"=false
+
+    # Default: 3.000000
+    D:Defense=3.0
+
+    # Default: true
+    B:Enabled=true
+
+    # Blocks in resourcenames that this entity cannot break.
+    S:"Griefing block blacklist" <
+        
+     >
+
+    # Blocks in mod names that this entity cannot break. For example, entering "minecraft" for example will make the entity unable to break all blocks from that mod.
+    S:"Griefing mod blacklist" <
+        
+     >
+
+    # Default: 282.000000
+    D:Health=282.0
+
+    # Default: 1.000000
+    D:"Knockback Resistance"=1.0
+
+    # Default: 0.800000
+    D:Speed=0.800000011920929
+}
+
+
+##########################################################################################################
 # minos base stats
 #--------------------------------------------------------------------------------------------------------#
 # 
@@ -234,8 +330,8 @@
 ##########################################################################################################
 
 "minos base stats" {
-    # Default: 6.500000
-    D:Attack=6.5
+    # Default: 3.500000
+    D:Attack=3.5
 
     # Default: false
     B:"Can Break Blocks"=false
@@ -243,20 +339,20 @@
     # Default: true
     B:"Can Spread Hive Creep"=true
 
-    # Default: 5.000000
-    D:Defense=5.0
+    # Default: 3.000000
+    D:Defense=3.0
 
     # Default: true
     B:Enabled=true
 
-    # Default: 11.000000
-    D:Health=11.0
+    # Default: 9.000000
+    D:Health=9.0
 
     # Default: 0.650000
     D:"Knockback Resistance"=0.6499999761581421
 
-    # Default: 0.300000
-    D:Speed=0.30000001192092896
+    # Default: 0.280000
+    D:Speed=0.2800000011920929
 }
 
 
@@ -307,8 +403,8 @@
 ##########################################################################################################
 
 "prime base stats" {
-    # Default: 3.500000
-    D:Attack=3.5
+    # Default: 3.000000
+    D:Attack=3.0
 
     # Default: 4.000000
     D:"Block Breaking Strength"=4.0
@@ -335,14 +431,14 @@
         
      >
 
-    # Default: 32.000000
-    D:Health=32.0
+    # Default: 30.000000
+    D:Health=30.0
 
     # Default: 1.000000
     D:"Knockback Resistance"=1.0
 
-    # Default: 0.190000
-    D:Speed=0.1899999976158142
+    # Default: 0.180000
+    D:Speed=0.18000000715255737
 }
 
 
@@ -355,8 +451,8 @@
 ##########################################################################################################
 
 "prober base stats" {
-    # Default: 6.000000
-    D:Attack=6.0
+    # Default: 5.000000
+    D:Attack=5.0
 
     # Default: 2.000000
     D:"Block Breaking Strength"=2.0
@@ -367,17 +463,17 @@
     # Default: false
     B:"Can Spread Hive Creep"=false
 
-    # Default: 3.250000
-    D:Defense=3.25
+    # Default: 2.000000
+    D:Defense=2.0
 
     # Default: true
     B:Enabled=true
 
-    # Default: 5.000000
-    D:Health=5.0
+    # Default: 4.000000
+    D:Health=4.0
 
-    # Default: 0.150000
-    D:"Knockback Resistance"=0.15000000596046448
+    # Default: 0.000000
+    D:"Knockback Resistance"=0.0
 
     # Default: 0.550000
     D:Speed=0.550000011920929
@@ -393,8 +489,8 @@
 ##########################################################################################################
 
 "rad'iwyrm base stats" {
-    # Default: 4.500000
-    D:Attack=4.5
+    # Default: 4.000000
+    D:Attack=4.0
 
     # Default: false
     B:"Can Break Blocks"=false
@@ -402,20 +498,20 @@
     # Default: false
     B:"Can Spread Hive Creep"=false
 
-    # Default: 3.750000
-    D:Defense=3.75
+    # Default: 2.500000
+    D:Defense=2.5
 
     # Default: true
     B:Enabled=true
 
-    # Default: 8.000000
-    D:Health=8.0
+    # Default: 7.000000
+    D:Health=7.0
 
     # Default: 0.350000
     D:"Knockback Resistance"=0.3499999940395355
 
-    # Default: 0.550000
-    D:Speed=0.550000011920929
+    # Default: 0.450000
+    D:Speed=0.44999998807907104
 }
 
 
@@ -428,8 +524,8 @@
 ##########################################################################################################
 
 "rover base stats" {
-    # Default: 3.500000
-    D:Attack=3.5
+    # Default: 3.000000
+    D:Attack=3.0
 
     # Default: false
     B:"Can Break Blocks"=false
@@ -437,20 +533,20 @@
     # Default: false
     B:"Can Spread Hive Creep"=false
 
-    # Default: 1.750000
-    D:Defense=1.75
+    # Default: 1.500000
+    D:Defense=1.5
 
     # Default: true
     B:Enabled=true
 
-    # Default: 4.500000
-    D:Health=4.5
+    # Default: 10.000000
+    D:Health=10.0
 
     # Default: 0.150000
     D:"Knockback Resistance"=0.15000000596046448
 
-    # Default: 0.700000
-    D:Speed=0.699999988079071
+    # Default: 0.550000
+    D:Speed=0.550000011920929
 }
 
 
@@ -463,8 +559,8 @@
 ##########################################################################################################
 
 "soldier base stats" {
-    # Default: 4.000000
-    D:Attack=4.0
+    # Default: 3.000000
+    D:Attack=3.0
 
     # Default: 3.500000
     D:"Block Breaking Strength"=3.5
@@ -475,8 +571,8 @@
     # Default: false
     B:"Can Spread Hive Creep"=false
 
-    # Default: 7.250000
-    D:Defense=7.25
+    # Default: 6.250000
+    D:Defense=6.25
 
     # Default: true
     B:Enabled=true
@@ -491,14 +587,14 @@
         
      >
 
-    # Default: 20.000000
-    D:Health=20.0
+    # Default: 32.000000
+    D:Health=32.0
 
     # Default: 0.700000
     D:"Knockback Resistance"=0.699999988079071
 
-    # Default: 0.500000
-    D:Speed=0.5
+    # Default: 0.350000
+    D:Speed=0.3499999940395355
 }
 
 
@@ -562,6 +658,41 @@
 
 
 ##########################################################################################################
+# the visitor base stats
+#--------------------------------------------------------------------------------------------------------#
+# 
+# Stats for the The Visitor.
+# 
+##########################################################################################################
+
+"the visitor base stats" {
+    # Default: 1.000000
+    D:Attack=1.0
+
+    # Default: false
+    B:"Can Break Blocks"=false
+
+    # Default: false
+    B:"Can Spread Hive Creep"=false
+
+    # Default: 4.000000
+    D:Defense=4.0
+
+    # Default: true
+    B:Enabled=true
+
+    # Default: 300.000000
+    D:Health=300.0
+
+    # Default: 1.000000
+    D:"Knockback Resistance"=1.0
+
+    # Default: 0.150000
+    D:Speed=0.15000000596046448
+}
+
+
+##########################################################################################################
 # vanitas base stats
 #--------------------------------------------------------------------------------------------------------#
 # 
@@ -608,17 +739,6 @@
 ##########################################################################################################
 
 "visitor base stats" {
-    # Default: 4
-    D:"Normal DEF"=7.0
-
-    # Default: 250
-    D:"Normal HP"=300.0
-
-    # Default: 1.0
-    D:"Normal KBR"=1.0
-
-    # Default: 0.15
-    D:"Normal SPD"=0.15
 }
 
 
@@ -626,40 +746,34 @@
 # warrior base stats
 #--------------------------------------------------------------------------------------------------------#
 # 
-# Stats for the Warriors.
+# Stats for the Warrior.
 # 
 ##########################################################################################################
 
 "warrior base stats" {
-    # Default: 4
-    D:"Normal ATK"=5.0
+    # Default: 3.000000
+    D:Attack=3.0
 
-    # Default: 2
-    D:"Normal DEF"=2.0
+    # Default: false
+    B:"Can Break Blocks"=false
 
-    # Default: 14
-    D:"Normal HP"=18.0
+    # Default: false
+    B:"Can Spread Hive Creep"=false
 
-    # Default: 0.05
-    D:"Normal KBR"=0.05
+    # Default: 2.250000
+    D:Defense=2.25
 
-    # Default: 0.45
-    D:"Normal SPD"=0.45
+    # Default: true
+    B:Enabled=true
 
-    # Default: 12
-    D:"Tainted Variant ATK"=12.0
+    # Default: 10.000000
+    D:Health=10.0
 
-    # Default: 16
-    D:"Tainted Variant DEF"=16.0
+    # Default: 0.450000
+    D:"Knockback Resistance"=0.44999998807907104
 
-    # Default: 66
-    D:"Tainted Variant HP"=66.0
-
-    # Default: 0.5
-    D:"Tainted Variant KBR"=0.5
-
-    # Default: 0.45
-    D:"Tainted Variant SPD"=0.45
+    # Default: 0.350000
+    D:Speed=0.3499999940395355
 }
 
 
@@ -667,7 +781,7 @@
 # worker base stats
 #--------------------------------------------------------------------------------------------------------#
 # 
-# Stats for the Worker.
+# Stats for the Workers.
 # 
 ##########################################################################################################
 
@@ -690,14 +804,27 @@
     # Default: true
     B:Enabled=true
 
-    # Default: 14.000000
-    D:Health=14.0
+    # Blocks in resourcenames that this entity cannot break.
+    S:"Griefing block blacklist" <
+        
+     >
+
+    # Blocks in mod names that this entity cannot break. For example, entering "minecraft" for example will make the entity unable to break all blocks from that mod.
+    S:"Griefing mod blacklist" <
+        
+     >
+
+    # Default: 8.000000
+    D:Health=8.0
 
     # Default: 0.150000
     D:"Knockback Resistance"=0.15000000596046448
 
-    # Default: 0.350000
-    D:Speed=0.3499999940395355
+    # Default: 0.300000
+    D:Speed=0.30000001192092896
+
+    # The amount of small wyrms needed to be collected in order to upgrade to a Grunt.
+    I:"Wyrms to Upgrade"=4
 }
 
 
@@ -710,8 +837,8 @@
 ##########################################################################################################
 
 "wyrmling base stats" {
-    # Default: 1.500000
-    D:Attack=1.5
+    # Default: 1.000000
+    D:Attack=1.0
 
     # Default: false
     B:"Can Break Blocks"=false
@@ -725,14 +852,14 @@
     # Default: true
     B:Enabled=true
 
-    # Default: 6.500000
-    D:Health=6.5
+    # Default: 5.000000
+    D:Health=5.0
 
-    # Default: 0.150000
-    D:"Knockback Resistance"=0.15000000596046448
+    # Default: 0.000000
+    D:"Knockback Resistance"=0.0
 
-    # Default: 0.550000
-    D:Speed=0.550000011920929
+    # Default: 0.400000
+    D:Speed=0.4000000059604645
 }
 
 
