--- a/config/WyrmsOfNyrus/2/general.cfg
+++ b/config/WyrmsOfNyrus/2/general.cfg
@@ -51,24 +51,6 @@ ai {
 
 
 creeped {
-    # Creepwyrms can check a block within a x by x by x range and infest it. For example, a range of 8 makes creepwyrms add blocks in a 8x8x8 range. Default: 16
-    I:"Creepwyrm Infestation Range"=16
-
-    # Maximum tier of Creeped that Creepwyrms can spawn. Default: 0
-    I:"Creepwyrm Maximum Spawn Tier"=5
-
-    # How far up Creepwyrms can call in Creeped Pods. Default: 30
-    I:"Creepwyrm Pod Call Radius"=100
-
-    # The number of Creeped Pods Creepwyrms will summon. Default: 1
-    I:"Creepwyrm Pod Call Threshold"=3
-
-    # Creepwyrms must summon x amount of times before they call a creeped pod to spread their influence. Default: 10
-    I:"Creepwyrm Pod Call Threshold Spawn"=7
-
-    # Amount of blocks Creepwyrms need to infest in order to spawn something. Default: 20
-    I:"Creepwyrm Spawn Threshold"=20
-
     # Makes the Creeped immune to cactus damage. Default: false
     B:"Immune to cacti"=true
 
@@ -123,7 +105,7 @@ gestalt {
     B:"Total Awareness"=true
 
     # Control how close a member of the hive must be to the player to sense them regardless if there's line of sight or not. Default: 4
-    D:"Total Awareness Range"=6.0
+    D:"Total Awareness Range"=4.0
 
     # While infamy is maxed out, wyrms and creeped know almost EXACTLY where the player is at all times, so long as they're within proximity. This total knowledge proximity is far longer than the Total Awareness Range. Default: false
     B:"Total War"=true
@@ -160,7 +142,7 @@ wyrms {
     # Drop pods can damage blocks around them with an actual explosion. SHOULD BE PAIRED WITH WYRMS AND CREEPED BEING IMMUNE TO EXPLOSIONS! Default: false
     B:"Drop pods cause block damage"=true
 
-    # The damage multiplier flying wyrms (including probers) will take from projectiles. Will not always be applicable to some flying wyrms. Does not apply to voidwyrms. 2.0 = doubled damage Default: 2.5
+    # The damage multiplier flying wyrms (including probers) will take from projectiles. Will not always be applicable to some flying wyrms. Not applied to Voidwyrms. 2.0 = doubled damage Default: 2.5
     D:"Flying Wyrm Projectile Weakness"=1.75
 
     # Makes wyrms immune to cactus damage. Default: false
@@ -175,10 +157,10 @@ wyrms {
     # Don't eat me! Stops worm entities from insta-killing entities with their head. Instead, heads do 3x damage. Default: true
     B:"No worm instagibs"=false
 
-    # When health is below 20%, the wyrm in question has x seconds before it explodes. If it is set on fire at this moment, the explosion power is doubled. Default: 30
-    I:"Uranium Variant Timer"=30
+    # When health is below 20%, the wyrm in question has x seconds before it explodes. If it is set on fire at this moment, the explosion power is doubled. Default: 20
+    I:"Uranium Variant Timer"=20
 
-    # The damage multiplier voidwyrms (like the Visitor) will take from projectiles. Will not always be applicable to some voidwyrms. Does not apply to flying wyrms. 2.0 = doubled damage Default: 3.0
+    # The damage multiplier voidwyrms (like the Visitor) will take from projectiles. Will not always be applicable to some voidwyrms. Does not apply to flying wyrms. 2.0 = doubled damage Default: 2.0
     D:"Voidyrm Projectile Weakness"=1.75
 
     # As a baseline, workers make a product every x ticks. This value is the base time it will take, total time will vary based on RNG still. Default: 2500
@@ -188,10 +170,10 @@ wyrms {
     D:"Wyrm Resistance"=1.100000023841858
 
     # The attack strength of wyrms. 1.0 = 100% Default: 1.0
-    D:"Wyrm Strength"=1.25
+    D:"Wyrm Strength"=1.149999976158142
 
     # The health of wyrms. 1.0 = 100% Default: 1.0
-    D:"Wyrm Vitality"=1.5
+    D:"Wyrm Vitality"=1.25
 
     # Makes wyrms destroy blocks. Default: true
     B:"Wyrm explosions damage blocks"=true
