--- a/config/WyrmsOfNyrus/2/world.cfg
+++ b/config/WyrmsOfNyrus/2/world.cfg
@@ -67,6 +67,12 @@ follies {
 
     # Only activated if Scape and Run: Parasites is present. Enables corium, which eats up the world once hive creep touches parastic infestation. Developer in-joke, disable if the destruction is too much. Default: true
     B:"Vile creep enabled"=true
+
+    # How many wyrms and creeped are allowed to spawn before they are denied to spawn; this is a passive cap for all wyrms & Creeped. Lower this if you are a server. Default: 75
+    I:"Wyrm Mob Cap"=75
+
+    # How many wyrms and creeped are allowed to spawn before they are denied to spawn; this adds more wyrms per player active on the server. Default: 7
+    I:"Wyrm Mob Cap Per Player"=7
 }
 
 
