--- a/config/WyrmsOfNyrus/2/wyrms.cfg
+++ b/config/WyrmsOfNyrus/2/wyrms.cfg
@@ -226,6 +226,102 @@
 
 
 ##########################################################################################################
+# grunt base stats
+#--------------------------------------------------------------------------------------------------------#
+# 
+# Stats for the Grunts.
+# 
+##########################################################################################################
+
+"grunt base stats" {
+    # Default: 5.000000
+    D:Attack=5.0
+
+    # Default: 12.000000
+    D:"Block Breaking Strength"=12.0
+
+    # Default: true
+    B:"Can Break Blocks"=true
+
+    # Default: false
+    B:"Can Spread Hive Creep"=false
+
+    # Default: 6.500000
+    D:Defense=6.5
+
+    # Default: true
+    B:Enabled=true
+
+    # Blocks in resourcenames that this entity cannot break.
+    S:"Griefing block blacklist" <
+        
+     >
+
+    # Blocks in mod names that this entity cannot break. For example, entering "minecraft" for example will make the entity unable to break all blocks from that mod.
+    S:"Griefing mod blacklist" <
+        
+     >
+
+    # Default: 80.000000
+    D:Health=80.0
+
+    # Default: 1.000000
+    D:"Knockback Resistance"=1.0
+
+    # Default: 0.300000
+    D:Speed=0.30000001192092896
+}
+
+
+##########################################################################################################
+# jormungand base stats
+#--------------------------------------------------------------------------------------------------------#
+# 
+# Stats for the Jormungand.
+# 
+##########################################################################################################
+
+"jormungand base stats" {
+    # Default: 8.500000
+    D:Attack=8.5
+
+    # Default: 30.000000
+    D:"Block Breaking Strength"=30.0
+
+    # Default: true
+    B:"Can Break Blocks"=true
+
+    # Default: false
+    B:"Can Spread Hive Creep"=false
+
+    # Default: 4.500000
+    D:Defense=4.5
+
+    # Default: true
+    B:Enabled=true
+
+    # Blocks in resourcenames that this entity cannot break.
+    S:"Griefing block blacklist" <
+        
+     >
+
+    # Blocks in mod names that this entity cannot break. For example, entering "minecraft" for example will make the entity unable to break all blocks from that mod.
+    S:"Griefing mod blacklist" <
+        
+     >
+
+    # Default: 308.500000
+    D:Health=308.5
+
+    # Default: 1.000000
+    D:"Knockback Resistance"=1.0
+
+    # Default: 0.895000
+    D:Speed=0.8949999809265137
+}
+
+
+##########################################################################################################
 # minos base stats
 #--------------------------------------------------------------------------------------------------------#
 # 
@@ -310,8 +406,8 @@
     # Default: 4.500000
     D:Attack=4.5
 
-    # Default: 4.000000
-    D:"Block Breaking Strength"=4.0
+    # Default: 10.000000
+    D:"Block Breaking Strength"=10.0
 
     # Default: true
     B:"Can Break Blocks"=true
@@ -443,8 +539,8 @@
     # Default: true
     B:Enabled=true
 
-    # Default: 5.500000
-    D:Health=5.5
+    # Default: 15.000000
+    D:Health=15.0
 
     # Default: 0.150000
     D:"Knockback Resistance"=0.15000000596046448
@@ -491,14 +587,14 @@
         
      >
 
-    # Default: 22.000000
-    D:Health=22.0
+    # Default: 34.000000
+    D:Health=34.0
 
     # Default: 0.700000
     D:"Knockback Resistance"=0.699999988079071
 
-    # Default: 0.500000
-    D:Speed=0.5
+    # Default: 0.350000
+    D:Speed=0.3499999940395355
 }
 
 
@@ -562,6 +658,41 @@
 
 
 ##########################################################################################################
+# the visitor base stats
+#--------------------------------------------------------------------------------------------------------#
+# 
+# Stats for the The Visitor.
+# 
+##########################################################################################################
+
+"the visitor base stats" {
+    # Default: 1.000000
+    D:Attack=1.0
+
+    # Default: false
+    B:"Can Break Blocks"=false
+
+    # Default: false
+    B:"Can Spread Hive Creep"=false
+
+    # Default: 6.000000
+    D:Defense=6.0
+
+    # Default: true
+    B:Enabled=true
+
+    # Default: 500.000000
+    D:Health=500.0
+
+    # Default: 1.000000
+    D:"Knockback Resistance"=1.0
+
+    # Default: 0.150000
+    D:Speed=0.15000000596046448
+}
+
+
+##########################################################################################################
 # vanitas base stats
 #--------------------------------------------------------------------------------------------------------#
 # 
@@ -608,17 +739,6 @@
 ##########################################################################################################
 
 "visitor base stats" {
-    # Default: 4
-    D:"Normal DEF"=8.0
-
-    # Default: 250
-    D:"Normal HP"=500.0
-
-    # Default: 1.0
-    D:"Normal KBR"=1.0
-
-    # Default: 0.15
-    D:"Normal SPD"=0.15
 }
 
 
@@ -626,40 +746,34 @@
 # warrior base stats
 #--------------------------------------------------------------------------------------------------------#
 # 
-# Stats for the Warriors.
+# Stats for the Warrior.
 # 
 ##########################################################################################################
 
 "warrior base stats" {
-    # Default: 4
-    D:"Normal ATK"=5.0
+    # Default: 5.000000
+    D:Attack=5.0
 
-    # Default: 2
-    D:"Normal DEF"=2.0
+    # Default: false
+    B:"Can Break Blocks"=false
 
-    # Default: 14
-    D:"Normal HP"=18.0
+    # Default: false
+    B:"Can Spread Hive Creep"=false
 
-    # Default: 0.05
-    D:"Normal KBR"=0.05
+    # Default: 3.500000
+    D:Defense=3.5
 
-    # Default: 0.45
-    D:"Normal SPD"=0.45
+    # Default: true
+    B:Enabled=true
 
-    # Default: 12
-    D:"Tainted Variant ATK"=12.0
+    # Default: 15.000000
+    D:Health=15.0
 
-    # Default: 16
-    D:"Tainted Variant DEF"=16.0
+    # Default: 0.450000
+    D:"Knockback Resistance"=0.44999998807907104
 
-    # Default: 66
-    D:"Tainted Variant HP"=66.0
-
-    # Default: 0.5
-    D:"Tainted Variant KBR"=0.5
-
-    # Default: 0.45
-    D:"Tainted Variant SPD"=0.45
+    # Default: 0.350000
+    D:Speed=0.3499999940395355
 }
 
 
@@ -667,7 +781,7 @@
 # worker base stats
 #--------------------------------------------------------------------------------------------------------#
 # 
-# Stats for the Worker.
+# Stats for the Workers.
 # 
 ##########################################################################################################
 
@@ -690,6 +804,16 @@
     # Default: true
     B:Enabled=true
 
+    # Blocks in resourcenames that this entity cannot break.
+    S:"Griefing block blacklist" <
+        
+     >
+
+    # Blocks in mod names that this entity cannot break. For example, entering "minecraft" for example will make the entity unable to break all blocks from that mod.
+    S:"Griefing mod blacklist" <
+        
+     >
+
     # Default: 14.000000
     D:Health=14.0
 
@@ -698,6 +822,9 @@
 
     # Default: 0.350000
     D:Speed=0.3499999940395355
+
+    # The amount of small wyrms needed to be collected in order to upgrade to a Grunt.
+    I:"Wyrms to Upgrade"=4
 }
 
 
@@ -728,8 +855,8 @@
     # Default: 8.000000
     D:Health=8.0
 
-    # Default: 0.150000
-    D:"Knockback Resistance"=0.15000000596046448
+    # Default: 0.000000
+    D:"Knockback Resistance"=0.0
 
     # Default: 0.550000
     D:Speed=0.550000011920929
