vistor in limbo

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ shaderpacks/ComplementaryUnbound_r5.0.1.zip
 config/normalasm/methods-stable_39.csv
 /config/spark
 mods/hitindication-1.12.2-2.0.jar
+/classOut
