--- a/config/srrevenants/SRRevenants.cfg
+++ b/config/srrevenants/SRRevenants.cfg
@@ -102,8 +102,8 @@ revenant_properties_forgotten {
     # List of effects Forgotten versions will apply. (duration/potionEffect/amplifier) [default: [140;srrevenants:freeze;0], [140;minecraft:mining_fatigue;0], [140;minecraft:hunger;0], [140;srrevenants:tredam;0], [140;srrevenants:nonhos;0]]
     S:"Version Forgotten Effects" <
         140;srrevenants:freeze;0
-        140;minecraft:mining_fatigue;0
-        140;minecraft:hunger;0
+        140;minecraft:mining_fatigue;2
+        140;srparasites:fear;0
         140;srrevenants:tredam;0
         140;srrevenants:nonhos;0
      >
