--- a/config/WyrmsOfNyrus/1/general.cfg
+++ b/config/WyrmsOfNyrus/1/general.cfg
@@ -139,6 +139,12 @@ wyrmfollies {
 ##########################################################################################################
 
 wyrms {
+    # If more than this amount of entities is loaded in the world, Borgi variants will not clone, and instead add points equivalent to 25% of HP to the Invasion progress. Default: 75
+    I:"Borgi Variant Clone Limit"=75
+
+    # How long in seconds does it take to clone. Default: 240 (4 minutes)
+    I:"Borgi Variant Clone Time"=240
+
     # Drop pods can damage blocks around them with an actual explosion. SHOULD BE PAIRED WITH WYRMS AND CREEPED BEING IMMUNE TO EXPLOSIONS! Default: false
     B:"Drop pods cause block damage"=true
 
