add BOMD w/ unfinished implementation

--- a/config/Elenai Dodge 2.cfg
+++ b/config/Elenai Dodge 2.cfg
@@ -114,6 +114,10 @@ general {
         weights {
             # The weight of each item of Armor. This overrides the default generated values. Each 'Steel Feather' is equivalent to a weight of 2. Insert values as such: modid:itemname=value. Any item with a weight over 24 will not show its weight as a tooltip. Idea Credit: SandwichHorror
             S:"Weights Override" <
+                da:flame_helmet=2
+                da:flame_chestplate=2
+                da:flame_leggings=2
+                da:flame_boots=2
                 erebus:jade_helmet=1
                 erebus:jade_chestplate=1
                 erebus:jade_leggings=1
