--- a/config/esm/epicsiegemod.cfg
+++ b/config/esm/epicsiegemod.cfg
@@ -3,6 +3,23 @@
 general {
     # Mobs that are exempt from AI modifications [default: [minecraft:villager_golem]]
     S:"AI Blacklist" <
+        da:void_blossom
+        da:mini_blossom
+        da:nether_aberant
+        da:spore_cloud
+        da:void_spike
+        da:void_leaf
+        da:spore_bomb
+        da:abberrant_projectile
+        da:pearl_projectile
+        da:dart_entity
+        da:boss_spawner
+        da:aoe_tile
+        da:flame_sling
+        da:flame_projectile
+        da:nether_pyre
+        da:fire_resist_item
+        da:flame_knight
         minecraft:villager
         minecraft:bat
         minecraft:squid
