--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -94,6 +94,8 @@ definitions {
         artifacts:shiny_red_balloon
         artifacts:flame_pendant
         %Ghast
+        da:ambition_flame
+        da:ambition_sword
      >
 
     #  [default: ]
@@ -132,6 +134,7 @@ definitions {
 
     #  [default: ]
     S:level10_entries <
+        @da
         contenttweaker:vitality_orb
         %Alpha
         @nethercraft
