--- a/config/materialchanger.cfg
+++ b/config/materialchanger.cfg
@@ -80,6 +80,16 @@
 changer {
     #  [default: ]
     S:changer <
+        ARMOR_PROTECTION;da:flame_helmet;3
+        ARMOR_TOUGHNESS;da:flame_helmet;0
+        ARMOR_PROTECTION;da:flame_chestplate;7
+        ARMOR_TOUGHNESS;da:flame_chestplate;2
+        ARMOR_PROTECTION;da:flame_leggings;6
+        ARMOR_TOUGHNESS;da:flame_leggings;1
+        ARMOR_PROTECTION;da:flame_boots;3
+        ARMOR_TOUGHNESS;da:flame_boots;0
+
+
         DURABILITY;cyclicmagic:charm_speed;10
         DURABILITY;cyclicmagic:charm_fire;20
         
