--- a/config/setbonus/1.12.2.009+.cfg
+++ b/config/setbonus/1.12.2.009+.cfg
@@ -26,6 +26,11 @@ general {
         # WirtsLeggings, diamond_leggings > display:Name = "Wirt's Leggings" & ench: = minecraft:protection ; lvl:4s
         #  
         S:"1. Equipment" <
+            InfernalHelm, da:flame_helmet
+            InfernalLeggings, da:flame_leggings
+            InfernalChest, da:flame_chestplate
+            InfernalBoots, da:flame_boots
+            
             DiamondHelm, minecraft:diamond_helmet
             DiamondLeggings, minecraft:diamond_leggings
             DiamondChest, minecraft:diamond_chestplate
@@ -58,6 +63,8 @@ general {
         S:"2. Equipment Sets" <
             FullDiamondArmor, Light In The Dark, head = DiamondHelm, chest = DiamondChest, legs = DiamondLeggings, feet = DiamondBoots
             
+            FullInfernalArmor, Infernal, head = InfernalHelm, chest = InfernalChest, legs = InfernalLeggings, feet = InfernalBoots
+            
             FullVeilArmor, Supernatural Resilience, head = VeilHelm, chest = VeilChest, legs = VeilLeggings, feet = VeilBoots
             
             VeilSwords, Pierce the Veil, mainhand = VeilSword, offhand = VeilSword
@@ -84,6 +91,8 @@ general {
         #  
         S:"2f. Bonuses" <
             FullDiamondArmorBonus, [Night Vision(30s) every 60s], 1, FullDiamondArmor
+            
+            FullInfernalArmorBonus, [Fire Immunity] [Strength 1] [Increased AOE of Infernal Sword], 1, FullInfernalArmor
             
             FullVeilArmorBonus, [Cure all effects every 15s], 1, FullVeilArmor
             
